--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,6 +77,12 @@ button:hover {
     background-color: #4a6040;
 }
 
+.about {
+    padding: 0 2rem; 
+}
+.info {
+    padding: 0 2rem; 
+}
 footer {
     background-color: #2c2c2c;
     color: white;
